{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 13,
  "lineage": "1bd446df-88a6-8488-6bac-53844e6613e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:721559935716:instance/i-0817fa43796d3f82c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0817fa43796d3f82c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "e-shop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e10c516e2da7fe5d",
            "private_dns": "ip-10-0-1-200.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "public_ip": "43.204.220.19",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ae42197838f9cdb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bd2744a414e27da",
            "tags": {
              "Name": "monitoring-instance"
            },
            "tags_all": {
              "Name": "monitoring-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae019ba6e4739c83"
            ]
          },
          "dependencies": [
            "aws_security_group.monitoring_sg",
            "aws_subnet.monitoring_subnet",
            "aws_vpc.monitoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "monitoring_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:721559935716:internet-gateway/igw-0912e6fe5f7800e93",
            "id": "igw-0912e6fe5f7800e93",
            "owner_id": "721559935716",
            "region": "ap-south-1",
            "tags": {
              "Name": "monitoring-igw"
            },
            "tags_all": {
              "Name": "monitoring-igw"
            },
            "vpc_id": "vpc-0b6d0f3fc2e3a84fb"
          },
          "dependencies": [
            "aws_vpc.monitoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "monitoring_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:721559935716:network-interface/eni-0fd8c5411b9c44e4e",
            "id": "eni-0fd8c5411b9c44e4e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:99:8f:6a:be:47",
            "owner_id": "721559935716",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0ae019ba6e4739c83"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bd2744a414e27da"
          },
          "dependencies": [
            "aws_security_group.monitoring_sg",
            "aws_subnet.monitoring_subnet",
            "aws_vpc.monitoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "monitoring_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:721559935716:route-table/rtb-0bafbf41d8f46117e",
            "id": "rtb-0bafbf41d8f46117e",
            "owner_id": "721559935716",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0912e6fe5f7800e93",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "monitoring-rt"
            },
            "tags_all": {
              "Name": "monitoring-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d0f3fc2e3a84fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.monitoring_igw",
            "aws_vpc.monitoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "monitoring_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092a7691048e08f91",
            "region": "ap-south-1",
            "route_table_id": "rtb-0bafbf41d8f46117e",
            "subnet_id": "subnet-01bd2744a414e27da"
          },
          "dependencies": [
            "aws_internet_gateway.monitoring_igw",
            "aws_route_table.monitoring_rt",
            "aws_subnet.monitoring_subnet",
            "aws_vpc.monitoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:721559935716:security-group/sg-0ae019ba6e4739c83",
            "description": "Allow SSH, HTTP, Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae019ba6e4739c83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "shop",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "monitoring-sg",
            "name_prefix": "",
            "owner_id": "721559935716",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "monitoring-sg"
            },
            "tags_all": {
              "Name": "monitoring-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d0f3fc2e3a84fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "monitoring_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:721559935716:subnet/subnet-01bd2744a414e27da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bd2744a414e27da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721559935716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "monitoring-subnet"
            },
            "tags_all": {
              "Name": "monitoring-subnet"
            },
            "vpc_id": "vpc-0b6d0f3fc2e3a84fb"
          },
          "dependencies": [
            "aws_vpc.monitoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "monitoring_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:721559935716:vpc/vpc-0b6d0f3fc2e3a84fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c783a7fc55ca29d",
            "default_route_table_id": "rtb-0fb9ad93394ce40f3",
            "default_security_group_id": "sg-0b4c2c2ff7873fb3e",
            "dhcp_options_id": "dopt-02ec56017e2c41549",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b6d0f3fc2e3a84fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb9ad93394ce40f3",
            "owner_id": "721559935716",
            "region": "ap-south-1",
            "tags": {
              "Name": "monitoring-vpc"
            },
            "tags_all": {
              "Name": "monitoring-vpc"
            }
          }
        }
      ]
    }
  ]
}